...
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.40" />

    <TextView
      android:id="@+id/audio_language_text"
      style="@style/AudioLanguageTextStyle"
      android:layout_marginTop="@dimen/phone_shared_margin_medium"
      android:text="@string/audio_language_fragment_text"
      android:textColor="@color/component_color_onboarding_shared_text_color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/audio_language_header_guide" />

    <TextView
      android:id="@+id/audio_language_subtitle"
      style="@style/AudioLanguageSubtitleStyle"
      android:layout_marginStart="@dimen/phone_shared_margin_large"
      android:layout_marginTop="@dimen/phone_shared_margin_small"
      android:layout_marginEnd="@dimen/phone_shared_margin_large"
      android:text="@string/audio_language_fragment_subtitle"
      android:labelFor="@id/audio_language_dropdown_list"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/audio_language_text" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/audio_language_dropdown_background"
...
          app:filter="@{false}"
          app:languageSelection="@{viewModel.selectedAudioLanguage}" />
      </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
      android:id="@+id/onboarding_steps_count"
      style="@style/OnboardingStepCountStyle"
      android:layout_margin="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_step_count_five"
      app:layout_constraintBottom_toTopOf="@id/onboarding_navigation_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_back"
      style="@style/OnboardingNavigationSecondaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/phone_shared_margin_medium"
      android:text="@string/onboarding_navigation_back"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/onboarding_navigation_continue"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_continue"
      style="@style/OnboardingNavigationPrimaryButton"
      android:layout_width="0dp"
...
